# db-handholder

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
config/: settings.py  urls.py  wsgi.py
databases/: apps.py  forms.py  models.py  urls.py  views.py
databases/migrations/: 0001_initial.py
databases/templates/databases/: database_form.html  database_list.html
src/db_handholder/: __init__.py
tests/: conftest.py  test_databases_view.py
