[project]
name = "db-handholder"
version = "0.1.0"
description = "Django web UI for automated database provisioning, backups, and security on any infrastructure."
readme = "README.md"
authors = [{ name = "Joakim Hellsén", email = "tlovinator@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
db-handholder = "db_handholder:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
